# zero-os

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
.github/: copilot-instructions.md
src/zero_os_backend/: Cargo.toml  zero_os_backend.did
src/zero_os_backend/src/: lib.rs
src/zero_os_frontend/: index.html  package.json  tsconfig.json  vite.config.js
src/zero_os_frontend/src/: App.js  App.tsx  SimpleApp.tsx  env.d.ts  main.tsx
src/zero_os_frontend/src/components/: ErrorBoundary.tsx  Layout.tsx  LoadingSpinner.tsx
src/zero_os_frontend/src/contexts/: AuthContext.tsx  FileSystemContext.tsx  SimpleAuthContext.tsx
src/zero_os_frontend/src/pages/: Dashboard.tsx  FileManager.tsx  Files.tsx  LoginPage.tsx  Notes.tsx  Tasks.tsx
